changed key apperence

--- a/BlueStarRedStar/Menus/HighScores/Key.xib
+++ b/BlueStarRedStar/Menus/HighScores/Key.xib
@@ -9,6 +9,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="atari full.ttf">
+            <string>Atari-Font-Full-Version</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KeyView" customModule="BlueStarRedStar" customModuleProvider="target">
             <connections>
@@ -21,16 +26,20 @@
             <rect key="frame" x="0.0" y="0.0" width="198" height="122"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="a" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s6T-Ay-fn5">
-                    <rect key="frame" x="94.5" y="50.5" width="9" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="a" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="13" translatesAutoresizingMaskIntoConstraints="NO" id="s6T-Ay-fn5">
+                    <rect key="frame" x="0.0" y="0.0" width="198" height="122"/>
+                    <fontDescription key="fontDescription" name="Atari-Font-Full-Version" family="Atari Font Full Version" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" red="0.62941267150000002" green="0.78339398920000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="s6T-Ay-fn5" secondAttribute="trailing" id="Hq6-1p-UQs"/>
                 <constraint firstItem="s6T-Ay-fn5" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="S9V-tt-4zR"/>
+                <constraint firstItem="s6T-Ay-fn5" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="q1B-gp-edg"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="s6T-Ay-fn5" secondAttribute="bottom" id="tBq-jL-wgX"/>
+                <constraint firstItem="s6T-Ay-fn5" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="wzS-La-91m"/>
                 <constraint firstItem="s6T-Ay-fn5" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="y1o-7d-1WE"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
